--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca de Ossus</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet">
 </head>
 <body>
-    <h1> Estas funcionando? </h1>
+    <div class="containerTrajetas">
+
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
