Formato de la pagina en HTML y estilo inicial en CSS

--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca de Ossus</title>
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <div class="containerTrajetas">
+    <header class="header">
+        <img src="img/Star Wars Logo.png" alt="Logo Star Wars" class="logo">
+        <nav class="navBar">
+            <a class="textFont">Home</a>
+            <a class="textFont">Personajes</a>
+            <a class="textFont">Películas</a>
+            <a class="textFont">Naves Espaciales</a>
+        </nav>
+    </header>
 
-    </div>
+    <section class="home">
+        <div>
+            <h1 class="textFont">Bienvenido a la Gran Biblioteca Jedi</h1>
+
+        </div>
+        <img class="homeImg">
+    </section>
+
+    <section class="results">
+
+        <div class="resultsTitle"></div>
+
+        <div class="containerCard"></div>
+
+        <div class="buttonContainer"></div>
+
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
